--- a/dev/index.html
+++ b/dev/index.html
@@ -31,7 +31,7 @@
 				},
 			];
 
-			const ptm = new PTM(items);
+			const ptm = new PTM(items, { logLevel: 4 });
 			ptm.buyItem("javascript");
 		</script>
 	</body>
